fix: update z-index for carousel

--- a/practice-one/src/stylesheets/components/_carousel.scss
+++ b/practice-one/src/stylesheets/components/_carousel.scss
@@ -42,6 +42,7 @@
   display: flex;
   justify-content: center;
   list-style-type: none;
+  z-index: 0;
 
   .dots {
     @extend %cursor-pointer;
